--- a/portofolio/prmn.html
+++ b/portofolio/prmn.html
@@ -17,6 +17,7 @@
         <meta name="keywords" content="graphic design, motion design, animation, web design, front-end design, wordpress">
         <meta name="description" content="SyDnt. SyDant. Mochammad Ridwan's portfolio. Explore my projects in graphic design, motion design, animation, and web development.">
         <meta name="author" content="Mochammad Ridwan">
+        <script src="../assets/js/redirect.js"></script>
         <!-- Schema.org Markup -->
         <script type="application/ld+json">
             {
