--- a/contact/index.html
+++ b/contact/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx" style="overscroll-behavior: none; scroll-behavior: auto;">
+<html lang="en" style="overscroll-behavior: none; scroll-behavior: auto;">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,6 @@
         <meta name="keywords" content="graphic design, motion design, animation, web design, front-end design, wordpress">
         <meta name="description" content="SyDnt. SyDant. Mochammad Ridwan's portfolio. Explore my projects in graphic design, motion design, animation, and web development.">
         <meta name="author" content="Mochammad Ridwan">
-        <script src="../assets/js/redirect.js"></script>
         <!-- Schema.org Markup -->
         <script type="application/ld+json">
             {
@@ -102,7 +101,7 @@
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="logo" href="../index.html">
+            <a class="logo" href="https://sydant.github.io">
                 <img src="../assets/imgs/Logo-light.svg" alt="SyDnt">
             </a>
             <div class="topnav d-flex align-items-center">
@@ -119,17 +118,17 @@
                 <ul class="main-menu rest">
                     <li>
                         <div class="o-hidden">
-                            <a href="../index.html" class="link"><span class="fill-text" data-text="Home">Home</span></a>
+                            <a href="https://sydant.github.io" class="link"><span class="fill-text" data-text="Home">Home</span></a>
                         </div>
                     </li>
                     <li>
                         <div class="o-hidden">
-                            <a href="../portofolio/index.html" class="link"><span class="fill-text" data-text="Portofolio">Portofolio</span></a>
+                            <a href="../portofolio" class="link"><span class="fill-text" data-text="Portofolio">Portofolio</span></a>
                         </div>
                     </li>
                     <li>
                         <div class="o-hidden">
-                            <a href="../contact/index.html" class="link"><span class="fill-text" data-text="Contact">Contact</span></a>
+                            <a href="../contact" class="link"><span class="fill-text" data-text="Contact">Contact</span></a>
                         </div>
                     </li>
                 </ul>
@@ -137,7 +136,7 @@
             <div class="cont-info valign">
                 <div class="text-center full-width">
                     <div class="logo">
-                        <img src="/assets/imgs/Logo.svg" alt="">
+                        <img src="../assets/imgs/Logo.svg" alt="">
                     </div>
                     <div class="social-icon mt-40">
                         <a href="https://github.com/SyDant"> <i class="fab fa-github"></i> </a>
@@ -239,7 +238,7 @@
                                                         <div class="d-flex align-items-center">
                                                             <span>Let's Talking</span>
                                                             <span class="icon ml-10">
-                                                                <img src="assets/imgs/arrow-top-black.svg"
+                                                                <img src="../assets/imgs/arrow-top-black.svg"
                                                                     alt="">
                                                             </span>
                                                         </div>
