--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx" style="overscroll-behavior: none; scroll-behavior: auto;">
+<html lang="en" style="overscroll-behavior: none; scroll-behavior: auto;">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,6 @@
         <meta name="keywords" content="graphic design, motion design, animation, web design, front-end design, wordpress">
         <meta name="description" content="SyDnt. SyDant. Mochammad Ridwan's portfolio. Explore my projects in graphic design, motion design, animation, and web development.">
         <meta name="author" content="Mochammad Ridwan">
-        <script src="assets/js/redirect.js"></script>
         <!-- Schema.org Markup -->
         <script type="application/ld+json">
             {
@@ -115,17 +114,17 @@
                     <ul class="main-menu rest">
                         <li>
                             <div class="o-hidden">
-                                <a href="index.html" class="link"><span class="fill-text" data-text="Home">Home</span></a>
+                                <a href="https://sydant.github.io" class="link"><span class="fill-text" data-text="Home">Home</span></a>
                             </div>
                         </li>
                         <li>
                             <div class="o-hidden">
-                                <a href="portofolio/index.html" class="link"><span class="fill-text" data-text="Portofolio">Portofolio</span></a>
+                                <a href="portofolio" class="link"><span class="fill-text" data-text="Portofolio">Portofolio</span></a>
                             </div>
                         </li>
                         <li>
                             <div class="o-hidden">
-                                <a href="contact/index.html" class="link"><span class="fill-text" data-text="Contact">Contact</span></a>
+                                <a href="contact" class="link"><span class="fill-text" data-text="Contact">Contact</span></a>
                             </div>
                         </li>
                     </ul>
@@ -418,7 +417,7 @@
                                                 </div>
                                             </div>
                                             <div class="img">
-                                                <a href="portofolio/prmn.html"><img src="assets/imgs/portfolio/prmn-Thumbnail.webp" alt="Pikiran Rakyat Media Network"></a>
+                                                <a href="portofolio/prmn"><img src="assets/imgs/portfolio/prmn-Thumbnail.webp" alt="Pikiran Rakyat Media Network"></a>
                                             </div>
                                         </div>
                                     </div>
@@ -447,7 +446,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="text-center mt-20"><a href="portofolio/index.html" class="butn butn-md butn-bg butn-rounded"> <div class="d-flex align-items-center">
+                                <div class="text-center mt-20"><a href="portofolio" class="butn butn-md butn-bg butn-rounded"> <div class="d-flex align-items-center">
                                             <span>See All Our Projects</span>
                                             <span class="icon ml-20"> <i class="fa-solid fa-chevron-right"></i> </span>
                                         </div> </a>
