--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx" style="overscroll-behavior: none; scroll-behavior: auto;">
+<html lang="en" style="overscroll-behavior: none; scroll-behavior: auto;">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,6 @@
         <meta name="keywords" content="graphic design, motion design, animation, web design, front-end design, wordpress">
         <meta name="description" content="SyDnt. SyDant. Mochammad Ridwan's portfolio. Explore my projects in graphic design, motion design, animation, and web development.">
         <meta name="author" content="Mochammad Ridwan">
-        <script src="../assets/js/redirect.js"></script>
         <!-- Schema.org Markup -->
         <script type="application/ld+json">
             {
@@ -102,13 +101,13 @@
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="logo" href="../index.html">
+            <a class="logo" href="https://sydant.github.io">
                 <img src="../assets/imgs/Logo-light.svg" alt="logo">
             </a>
             <div class="topnav d-flex align-items-center">
-                <a href="../contact/index.html" class="butn butn-rounded">
+                <a href="../contact/" class="butn butn-rounded">
                     <div class="d-flex align-items-center">
-                        <span>Available for hire!</span>
+                        <span>Available for hire</span>
                     </div>
                 </a>
                 <div class="menu-icon cursor-pointer">
@@ -124,17 +123,17 @@
                 <ul class="main-menu rest">
                     <li>
                         <div class="o-hidden">
-                            <a href="../index.html" class="link"><span class="fill-text" data-text="Home">Home</span></a>
+                            <a href="https://sydant.github.io" class="link"><span class="fill-text" data-text="Home">Home</span></a>
                         </div>
                     </li>
                     <li>
                         <div class="o-hidden">
-                            <a href="../portofolio/index.html" class="link"><span class="fill-text" data-text="Portofolio">Portofolio</span></a>
+                            <a href="../portofolio" class="link"><span class="fill-text" data-text="Portofolio">Portofolio</span></a>
                         </div>
                     </li>
                     <li>
                         <div class="o-hidden">
-                            <a href="../contact/index.html" class="link"><span class="fill-text" data-text="Contact">Contact</span></a>
+                            <a href="../contact" class="link"><span class="fill-text" data-text="Contact">Contact</span></a>
                         </div>
                     </li>
                 </ul>
