--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                       "@type": "ListItem",
                       "position": 2,
                       "name": "Portfolio",
-                      "item": "https://sydant.github.io/portofolio/index.html"
+                      "item": "https://sydant.github.io/portofolio/"
                     }
                   ]
                 }
@@ -184,7 +184,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="md-hide"><a href="contact.html" class="butn butn-md butn-bord butn-rounded"> <div class="d-flex align-items-center">
+                            <div class="md-hide"><a href="contact" class="butn butn-md butn-bord butn-rounded"> <div class="d-flex align-items-center">
                                         <span class="icon mr-10"> <i class="fa-regular fa-envelope"></i> </span>
                                         <span>Available for hire!</span>
                                     </div> </a>
