--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -61,7 +61,7 @@
                       "@type": "ListItem",
                       "position": 2,
                       "name": "Portfolio",
-                      "item": "https://sydant.github.io/portofolio/index.html"
+                      "item": "https://sydant.github.io/portofolio/"
                     }
                   ]
                 }
