--- a/portofolio/prmn/index.html
+++ b/portofolio/prmn/index.html
@@ -61,7 +61,7 @@
                       "@type": "ListItem",
                       "position": 2,
                       "name": "Portfolio",
-                      "item": "https://sydant.github.io/portofolio/index.html"
+                      "item": "https://sydant.github.io/portofolio/"
                     }
                   ]
                 }
@@ -141,7 +141,7 @@
             <div class="cont-info valign">
                 <div class="text-center full-width">
                     <div class="logo">
-                        <img src="/assets/imgs/Logo.svg" alt="">
+                        <img src="/assets/imgs/Logo.svg" alt="SyDant Creative">
                     </div>
                     <div class="social-icon mt-40">
                         <a href="https://github.com/SyDant"> <i class="fab fa-github"></i> </a>
