--- a/portofolio/prmn/index.html
+++ b/portofolio/prmn/index.html
@@ -123,17 +123,17 @@
                 <ul class="main-menu rest">
                     <li>
                         <div class="o-hidden">
-                            <a href="../" class="link"><span class="fill-text" data-text="Home">Home</span></a>
+                            <a href="/" class="link"><span class="fill-text" data-text="Home">Home</span></a>
                         </div>
                     </li>
                     <li>
                         <div class="o-hidden">
-                            <a href="../portofolio" class="link"><span class="fill-text" data-text="Portofolio">Portofolio</span></a>
+                            <a href="/portofolio" class="link"><span class="fill-text" data-text="Portofolio">Portofolio</span></a>
                         </div>
                     </li>
                     <li>
                         <div class="o-hidden">
-                            <a href="../contact" class="link"><span class="fill-text" data-text="Contact">Contact</span></a>
+                            <a href="/contact" class="link"><span class="fill-text" data-text="Contact">Contact</span></a>
                         </div>
                     </li>
                 </ul>
