--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -4,25 +4,25 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta property="og:title" content="SyDnt Creative - Mochammad Ridwan" />
-        <meta property="og:description" content="Portfolio of Mochammad Ridwan, a Graphic Designer, Video Editor, and Product Development." />
+        <meta property="og:title" content="SyDnt Creative - Talha Nadeem" />
+        <meta property="og:description" content="Portfolio of Talha Nadeem, a Graphic Designer, Video Editor, and Product Development." />
         <meta property="og:image" content="https://sydant.github.io/assets/imgs/photo.avif" />
         <meta property="og:url" content="https://sydant.github.io" />
         <meta property="og:type" content="website" />
         <meta name="robots" content="index, follow" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="SyDnt Creative - Mochammad Ridwan" />
-        <meta name="twitter:description" content="Portfolio of Mochammad Ridwan, a Graphic Designer, Video Editor, and Product Development." />
+        <meta name="twitter:title" content="SyDnt Creative - Talha Nadeem" />
+        <meta name="twitter:description" content="Portfolio of Talha Nadeem, a Graphic Designer, Video Editor, and Product Development." />
         <meta name="twitter:image" content="https://sydant.github.io/assets/imgs/photo.avif" />
         <meta name="keywords" content="graphic design, motion design, animation, web design, front-end design, wordpress">
-        <meta name="description" content="SyDnt. SyDant. Mochammad Ridwan's portfolio. Explore my projects in graphic design, motion design, animation, and web development.">
-        <meta name="author" content="Mochammad Ridwan">
+        <meta name="description" content="SyDnt. SyDant. Talha Nadeem's portfolio. Explore my projects in graphic design, motion design, animation, and web development.">
+        <meta name="author" content="Talha Nadeem">
         <!-- Schema.org Markup -->
         <script type="application/ld+json">
             {
               "@context": "https://schema.org",
               "@type": "Person",
-              "name": "Mochammad Ridwan",
+              "name": "Talha Nadeem",
               "url": "https://sydant.github.io",
               "image": "https://sydant.github.io/assets/imgs/photo.avif",
               "jobTitle": [
@@ -32,15 +32,15 @@
               ],
               "sameAs": [
                 "https://github.com/SyDant",
-                "https://x.com/ShikiteMeikato",
+                "https://x.com/abc",
                 "https://www.instagram.com/sy.dnt/",
                 "https://pin.it/50jkhQMV0"
               ],
-              "email": "shikitemeikato@gmail.com",
-              "telephone": "+62 899 948 4004",
+              "email": "abc@gmail.com",
+              "telephone": "+92 301 1855977",
               "address": {
                 "@type": "PostalAddress",
-                "addressLocality": "Bandung",
+                "addressLocality": "Pakistan",
                 "addressCountry": "ID"
               }
             }
@@ -83,13 +83,11 @@
 
         <div class="loader-wrap-heading">
             <div class="load-text">
-                <span>A</span>
-                <span>N</span>
                 <span>T</span>
-                <span>O</span>
-                <span>S</span>
                 <span>A</span>
-                <span>N</span>
+                <span>L</span>
+                <span>H</span>
+                <span>A</span>
             </div>
         </div>
     </div>
@@ -101,7 +99,7 @@
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="logo" href="https://sydant.github.io">
+            <a class="logo" href="/">
                 <img src="../assets/imgs/Logo-light.svg" alt="logo">
             </a>
             <div class="topnav d-flex align-items-center">
@@ -145,16 +143,16 @@
                     </div>
                     <div class="social-icon mt-40">
                         <a href="https://github.com/SyDant"> <i class="fab fa-github"></i> </a>
-                        <a href="https://x.com/ShikiteMeikato"> <i class="fab fa-x-twitter"></i> </a>
+                        <a href="https://x.com/abc"> <i class="fab fa-x-twitter"></i> </a>
                         <a href="https://www.instagram.com/sy.dnt/"> <i class="fab fa-instagram"></i> </a>
                         <a href="https://pin.it/50jkhQMV0"> <i class="fab fa-pinterest"></i> </a>
                     </div>
                     <div class="item mt-30">
-                        <h5>Mochammad Ridwan<br>Bandung,ID</h5>
+                        <h5>Talha Nadeem<br>Pakistan,ID</h5>
                     </div>
                     <div class="item mt-10">
-                        <h5><a href="#0">shikitemeikato@gmail.com</a></h5>
-                        <h5 class="underline"><a href="#0">+62 899 948 4004</a></h5>
+                        <h5><a href="#0">abc@gmail.com</a></h5>
+                        <h5 class="underline"><a href="#0">+92 301 1855977</a></h5>
                     </div>
                 </div>
             </div>
@@ -365,13 +363,13 @@
                                     <div class="col-md-6">
                                         <div class="item">
                                             <span class="sub-color">location</span>
-                                            <p>Bandung, Indonesia</p>
+                                            <p>Pakistan, Indonesia</p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 d-flex justify-content-end justify-end">
                                         <div class="item">
                                             <span class="sub-color">inquiry</span>
-                                            <p>shikitemeikato@gmail.com</p>
+                                            <p>abc@gmail.com</p>
                                             <p>+628999484004</p>
                                         </div>
                                     </div>
