--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                       <div class="img">
                         <a href="#"
                           ><img
-                            src="assets/imgs/portfolio/gori-thumbnail.webp"
+                            src="assets/imgs/portfolio/1 (1).jpg"
                             alt="Gori The Label"
                         /></a>
                       </div>
@@ -483,7 +483,7 @@
                       <div class="img">
                         <a href="#"
                           ><img
-                            src="assets/imgs/portfolio/tisave.webp"
+                            src="assets/imgs/portfolio/1 (1).png"
                             alt="Tisave Indonesia"
                         /></a>
                       </div>
@@ -499,7 +499,7 @@
                       <div class="img">
                         <a href="#"
                           ><img
-                            src="assets/imgs/portfolio/qtakasi.webp"
+                            src="assets/imgs/portfolio/1 (10).jpg"
                             alt="Qtakasi Store"
                         /></a>
                       </div>
@@ -515,7 +515,7 @@
                       <div class="img">
                         <a href="#"
                           ><img
-                            src="assets/imgs/portfolio/iceberg.webp"
+                            src="assets/imgs/portfolio/1 (10).png"
                             alt="Iceberg North Group"
                         /></a>
                       </div>
@@ -531,7 +531,7 @@
                       <div class="img">
                         <a href="#"
                           ><img
-                            src="assets/imgs/portfolio/gsc-thumbnail.webp"
+                            src="assets/imgs/portfolio/1 (11).jpg"
                             alt="Gamestorecan Top Up Terpercaya"
                         /></a>
                       </div>
@@ -547,7 +547,7 @@
                       <div class="img">
                         <a href="#"
                           ><img
-                            src="assets/imgs/portfolio/okiinoha-thumbnail.webp"
+                            src="assets/imgs/portfolio/1 (11).png"
                             alt="Okiiniri no Hanamachi"
                         /></a>
                       </div>
@@ -563,7 +563,7 @@
                       <div class="img">
                         <a href="portofolio/prmn"
                           ><img
-                            src="assets/imgs/portfolio/prmn-Thumbnail.webp"
+                            src="assets/imgs/portfolio/1 (12).jpg"
                             alt="Pikiran Rakyat Media Network"
                         /></a>
                       </div>
@@ -579,7 +579,7 @@
                       <div class="img">
                         <a href="#"
                           ><img
-                            src="assets/imgs/portfolio/kyuu-thumbnail.webp"
+                            src="assets/imgs/portfolio/1 (12).png"
                             alt="Kyuu Festival"
                         /></a>
                       </div>
@@ -595,7 +595,7 @@
                       <div class="img">
                         <a href="#"
                           ><img
-                            src="assets/imgs/portfolio/alwan-thumbnail.webp"
+                            src="assets/imgs/portfolio/1 (13).jpg"
                             alt="Valorant"
                         /></a>
                       </div>
@@ -838,7 +838,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/header/awards/gori.avif"
+                            src="assets/imgs//portfolio/Logo Sizing 100x100-01.svg"
                             alt="Gori The Label"
                           />
                         </div>
@@ -850,7 +850,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/header/awards/tisave.avif"
+                            src="assets/imgs/portfolio/Logo Sizing 100x100-02.svg"
                             alt="tisave Indonesia"
                           />
                         </div>
@@ -862,7 +862,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/header/awards/qtakasi.avif"
+                            src="assets/imgs//portfolio/Logo Sizing 100x100-03.svg"
                             alt="Qtakashimura"
                           />
                         </div>
@@ -874,7 +874,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/header/awards/gsc.avif"
+                            src="assets/imgs//portfolio/Logo Sizing 100x100-04.svg"
                             alt="Gamestorecan"
                           />
                         </div>
@@ -886,7 +886,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/header/awards/prmn.avif"
+                            src="assets/imgs//portfolio/Logo Sizing 100x100-05.svg"
                             alt="Pikiran Rakyat Media Network"
                           />
                         </div>
@@ -900,7 +900,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/header/awards/mr.avif"
+                            src="assets/imgs//portfolio/Logo Sizing 100x100-02.svg"
                             alt="Mirai Project"
                           />
                         </div>
@@ -912,7 +912,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/header/awards/arcapada.avif"
+                            src="assets/imgs//portfolio/Logo Sizing 100x100-02.svg"
                             alt="Arcapada Tours"
                           />
                         </div>
@@ -924,7 +924,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/header/awards/okinoha.avif"
+                            src="assets/imgs//portfolio/Logo Sizing 100x100-02.svg"
                             alt="Okinoha"
                           />
                         </div>
@@ -936,7 +936,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/header/awards/kyuu.avif"
+                            src="assets/imgs//portfolio/Logo Sizing 100x100-02.svg"
                             alt="KyuuFest"
                           />
                         </div>
@@ -948,7 +948,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/header/awards/iceberg.avif"
+                            src="assets/imgs//portfolio/Logo Sizing 100x100-02.svg"
                             alt="Iceberg North Group"
                           />
                         </div>
