--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs//portfolio/Logo Sizing 100x100-01.svg"
+                            src="assets/imgs//portfolio/logo-01.svg"
                             alt="Gori The Label"
                           />
                         </div>
@@ -850,7 +850,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs/portfolio/Logo Sizing 100x100-02.svg"
+                            src="assets/imgs/portfolio/logo-02.svg"
                             alt="tisave Indonesia"
                           />
                         </div>
@@ -862,7 +862,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs//portfolio/Logo Sizing 100x100-03.svg"
+                            src="assets/imgs/portfolio/logo-03.svg"
                             alt="Qtakashimura"
                           />
                         </div>
@@ -874,7 +874,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs//portfolio/Logo Sizing 100x100-04.svg"
+                            src="assets/imgs/portfolio/logo-04.svg"
                             alt="Gamestorecan"
                           />
                         </div>
@@ -886,7 +886,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs//portfolio/Logo Sizing 100x100-05.svg"
+                            src="assets/imgs/portfolio/logo-05.svg"
                             alt="Pikiran Rakyat Media Network"
                           />
                         </div>
@@ -900,7 +900,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs//portfolio/Logo Sizing 100x100-02.svg"
+                            src="assets/imgs/portfolio/logo-06.svg"
                             alt="Mirai Project"
                           />
                         </div>
@@ -912,7 +912,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs//portfolio/Logo Sizing 100x100-02.svg"
+                            src="assets/imgs/portfolio/logo-07.svg"
                             alt="Arcapada Tours"
                           />
                         </div>
@@ -924,7 +924,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs//portfolio/Logo Sizing 100x100-02.svg"
+                            src="assets/imgs/portfolio/logo-08.svg"
                             alt="Okinoha"
                           />
                         </div>
@@ -936,7 +936,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs//portfolio/Logo Sizing 100x100-02.svg"
+                            src="assets/imgs/portfolio/logo-09.svg"
                             alt="KyuuFest"
                           />
                         </div>
@@ -948,7 +948,7 @@
                       >
                         <div class="img">
                           <img
-                            src="assets/imgs//portfolio/Logo Sizing 100x100-02.svg"
+                            src="assets/imgs/portfolio/logo-10.svg"
                             alt="Iceberg North Group"
                           />
                         </div>
